stopped hero img from overflowing parent container

--- a/src/App.css
+++ b/src/App.css
@@ -16,4 +16,5 @@ html body {
   padding: 0;
   margin: 0;
   width: 100%;
+  overflow: none;
 }
