--- a/src/Home.css
+++ b/src/Home.css
@@ -21,41 +21,24 @@
     margin-top: 10px;
 }
 
-.photo {
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#photo-text {
-    font-size: 40px;
-    font-weight: 700;
-    color: white;
-    margin-top: 10px;
-}
-
-#camera-icon {
-    font-size: 40px;
-    margin-right: 5px;
-   margin-top: 20px;
-   color: white;
-}
-
-#sub-text {
-    font-size: 28px;
-    color: white;
-}
-
-.photo-sub-text-box {
-    border: 1px solid black;
-    display: flex;
-    justify-content: center;
-}
-
 #what {
     font-size: 32px;
     font-weight: 700px !important;
 }
+
+#container {
+    overflow: none;
+}
+
+.hero-img {
+    /* max-width: 600px;
+    max-height: 420px; */
+    /* width: 200px;
+    height: 200px; */
+    width: 100%
+    
+}
+
 @media (max-width: 1250px) {
     #header {
         font-size: 38px;
@@ -79,6 +62,7 @@
     #sub-header {
         font-size: 30px;
     }
+
 }
 
 @media (max-width: 999px) {
@@ -99,8 +83,12 @@
     }
 
     .hero-img {
-        max-width: 600px;
-        max-height: 420px;
+        /* max-width: 600px;
+        max-height: 420px; */
+        /* width: 200px;
+        height: 200px; */
+        width: 100%;
+        
     }
 
     .about {
@@ -121,12 +109,15 @@
     #container {
         display: flex; 
         flex-direction: column-reverse;
+        /* max-width: 370px; */
+        overflow: none;
     }
 
     .hero-img {
-        max-width: 480px;
-        height: auto;
-        width: 300px;
+        /* max-width: 480px; */
+        /* height: auto;
+        width: 250px; */
+      width: 100%
     }
 
     #header {
@@ -140,14 +131,14 @@
     }
 
     #about {
-        font-size: 18px;
+        font-size: 24px;
         line-height: 32px;
     }
 
     .bar {
         width: 6px;
         background-color: #24307D;
-        height: 104px;
+        height: 140px;
         margin-left: 5vw;
         margin-right: 5vw;
         margin-top: 10px;
@@ -159,21 +150,6 @@
         height: 4px;
     }
 
-    .photo {
-        width: 360px;
-        height: 300px;
-        border: 1px solid red;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    #photo-text {
-        font-size: 40px;
-        font-weight: 700;
-        color: white;
-        margin-top: 10px;
-    }
-
     #services {
         margin-left: 80px
     }
@@ -183,27 +159,24 @@
         margin-left: 10px;
     }
 
-    #camera-icon {
-        font-size: 40px;
-        margin-right: 5px;
-       margin-top: 20px;
-       color: white;
-    }
-    
-    .photo-sub-text-box {
+    #what {
+        font-size: 26px;
+        font-weight: 700px !important;
         margin-top: 40px;
-        font-size: 28px;
-        max-width: 330px;
+        margin-bottom: 10px
+    }
+
+    .head-fmt {
         margin-left: 20px;
     }
 
-    #sub-text {
-        font-size: 28px;
-        color: white;
+    .card-group {
+        background-color: red;
+        /* display: flex;
+        justify-content: center; */
     }
 
-    #what {
-        font-size: 32px;
-        font-weight: 700px !important;
+    .card {
+        max-width: 300px;
     }
 }
