--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #FFFCFA;
+  overflow: none;
 }
 
 code {
